06/23/2013 Oleg Moskalenko <mom040267@gmail.com>,
			Vladimir Tsanev <tsachev@gmail.com> 
Version 1.8.7.0 'Black Dow':

	- Added support for obsolete "classic" STUN RFC 3489;
	- Full TURN support for Cygwin implemented: MS-Win UDP sockets fixed;
	- Relay threads number changed;
	- Fedora warnings fixed;
	- Multiple Makefile and ./configure script fixes implemented:
		* Changes taken from Arch Linux port;
		* Manpages installation and deinstallation;
		* rfc5769check utility removed from installation, it is used for the 
		compilation result test only and makes no sense for the end user;
		* "--parameter" format support in ./configure script; it allows
		simpler native OS package definitions (like in Debian package);
		* Mac OS X linking warnings removed.

06/08/2013 Oleg Moskalenko <mom040267@gmail.com> 
Version 1.8.6.3 'Black Dow':

	- DONT-FRAGMENT flag removed on UDP listening (clients-facing) sockets.
	- UDP fix for Cygwin only: UDP channels work fine now.
	- docs fixes.
	
06/06/2013 Oleg Moskalenko <mom040267@gmail.com> 
Version 1.8.6.2 'Black Dow':

	- Just cosmetic re-packaging for Debian, tarball warnings removed.
	
06/05/2013 Oleg Moskalenko <mom040267@gmail.com> 
Version 1.8.6.1 'Black Dow':

	- Peer permissions bug fixed.
	
06/03/2013 Oleg Moskalenko <mom040267@gmail.com> 
Version 1.8.6.0 'Black Dow':

	- Optimization.
	- Mac OS X compilation fixes.
	
06/01/2013 Oleg Moskalenko <mom040267@gmail.com> 
Version 1.8.5.4 'Black Dow':

	- Issues 29 and 30 fixed (channels padding).
	- minor fixes.
	- Mac OS X compilation fixes.
	- Cygwin-related compilation fixes and INSTALL additions.

05/31/2013 Oleg Moskalenko <mom040267@gmail.com> 
Version 1.8.5.3 'Black Dow':

	- REST API extra script example and docs extention.
	
05/26/2013 Oleg Moskalenko <mom040267@gmail.com> 
Version 1.8.5.1 'Black Dow':

	- Config file parsing fixed (Issue 28)

05/20/2013 Oleg Moskalenko <mom040267@gmail.com>,
			Erik Johnston <erikj@openmarket.com> 
Version 1.8.5.0 'Black Dow':
