@@ -6,6 +6,7 @@ Version 1.8.7.0 'Black Dow':
 	- Full TURN support for Cygwin implemented: MS-Win UDP sockets fixed;
 	- Relay threads number changed;
 	- Fedora warnings fixed;
+	- turndb/testdbsetup.sh example file added;
 	- Multiple Makefile and ./configure script fixes implemented:
 		* Changes taken from Arch Linux port;
 		* Manpages installation and deinstallation;
